--- a/src/app/datagrid/datagrid-dynamic.demo.html
+++ b/src/app/datagrid/datagrid-dynamic.demo.html
@@ -42,8 +42,13 @@
     (close)="onContextMenuClose($event)"
     (open)="onContextMenuOpen($event)"
   >
-    <li *ngFor="let item of menuItems">
+    <li soho-popupmenu-item *ngFor="let item of menuItems" [subMenu]="item.submenu">
       <a soho-popupmenu-label href="#">{{item.label}}</a>
+      <ul *ngIf="item.submenu">
+        <li soho-popupmenu-item *ngFor="let sub of item.submenu">
+          <a soho-popupmenu-label>{{sub.label}}</a>
+        </li>
+      </ul>
     </li>
   </ul>
 </div>
